removed timeout argument for socket connection

--- a/changelog.d/20241213_143209_bradsacks99.rst
+++ b/changelog.d/20241213_143209_bradsacks99.rst
@@ -4,18 +4,18 @@
 ..
 Removed
 -------
-..
-- Removed dependency: aiopath
+
+- Timeout argument for socket connection
 ..
 Added
 -----
-..
-- Added dependency: aiopathlib
-..
-.. Changed
-.. -------
-..
-.. - A bullet item for the Changed category.
+
+- Added dependency: aiopath reverting previous change
+
+Changed
+-------
+
+- Updated dependencies.
 ..
 .. Deprecated
 .. ----------
